--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img id="steve" src="steve.png">
         <p> привет, я стив!</p>
     </div>
-    <div> id= "mainsection"
+    <div id= "mainsection">
         <p> кто я?: я - игрок minecraft</p>
         <p> что я делаю?: строю крутые здания в игре</p>
         <p>больше всего я люблю: добывать алмазы</p>
