--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <img id="steve" src="steve.png">
         <p> привет, я стив!</p>
     </div>
-    <div id= "mainsection">
-        <p> кто я?: я - игрок minecraft</p>
-        <p> что я делаю?: строю крутые здания в игре</p>
-        <p>больше всего я люблю: добывать алмазы</p>
+    <div class = "container" id= "mainsection">
+        <p class="item"> кто я?: я - игрок minecraft</p>
+        <p class="item item2 "> что я делаю?: строю крутые здания в игре</p>
+        <p class="item"> больше всего я люблю: добывать алмазы</p>
     </div>
 </body>
 </html>
